--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -1,19 +1,53 @@
 body
-  color blue
+  color white
   margin 0
   font-family 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif'
-
+  background #222
+.header
+  position absolute
+  top 0
+  left 0
+  right 0
+  display flex
+  justify-content space-around
+  border-bottom 2px solid
+  z-index 100
 .article-fullscreen
   width 100%
   height 100vh
   overflow hidden
   display flex
+  .col
+    padding 4.5em 0 1em 0
+    opacity .9
+    height 90vh
+    .item
+      display flex
+      font-size 4.5em
+      padding 0
+      height 20%
+      margin 0
+      width 100%
+      align-items center
+    &.active
+      color yellow
   &__col-1
     background-size cover
     background-position 50%
     height 100%
     width 50%
+    transition background 1s
+    .item
+      justify-content flex-start
+      > span
+        margin-left .65em
   &__col-2
-    background yellow
+    background-size cover
+    background-position 50%
     height 100%
     width 50%
+    transition background 1s
+    .item
+      justify-content flex-end
+      > span
+        margin-right .65em
