--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -3,51 +3,104 @@ body
   margin 0
   font-family 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif'
   background #222
+  font-size 13px
+h1
+  font-weight 300
+  font-size 100px
+  margin-bottom 50px
+  line-height 50px
+  margin-top 75px
 .header
   position absolute
   top 0
   left 0
   right 0
   display flex
-  justify-content space-around
+  justify-content space-between
+  align-items center
   border-bottom 2px solid
-  z-index 100
+  z-index 300
+  height 80px
+  padding 0 30px
+  .logo.artsy
+    height 40px
+    width auto
+  .right
+    display flex
+    align-items center
+    p
+      display inline-block
+      margin 0 1.5em 0 0
+    .logo.planet-art
+      display inline-block
+      width 130px
 .article-fullscreen
   width 100%
   height 100vh
   overflow hidden
   display flex
-  .col
-    padding 4.5em 0 1em 0
+  .title
+    position absolute
+    left 0
+    right 0
+    top 80px
+    bottom 0
+    display flex
+    text-align center
+    flex-wrap wrap
+    z-index 300
+    h1:nth-child(1)
+      width 100%
+      align-self flex-start
+    h1:nth-child(2)
+      width 100%
+      align-self flex-end
+  .media
+    background rgba(255,255,255, 0)
+    background-size cover !important
+    background-position 50% !important
+    height 100vh
+    transition background .25s linear
     opacity .9
-    height 90vh
+    video
+      position absolute
+      top 0
+      bottom 0
+      left -25%
+      right 0
+      min-width 100%
+      z-index -10
+      height 100%
+      opacity 0
+      z-index 200
+      transition opacity .25s linear
+  .col
+    position absolute
+    top 120px
+    bottom 5px
+    left 0
+    right 0
+    z-index 350
     .item
       display flex
-      font-size 4.5em
       padding 0
       height 20%
       margin 0
       width 100%
       align-items center
-    &.active
-      color yellow
-  &__col-1
+      &.active
+        color yellow
+  &__col-1, &__col-2
     background-size cover
     background-position 50%
     height 100%
     width 50%
     transition background 1s
-    .item
-      justify-content flex-start
-      > span
-        margin-left .65em
-  &__col-2
-    background-size cover
-    background-position 50%
-    height 100%
-    width 50%
-    transition background 1s
-    .item
-      justify-content flex-end
-      > span
-        margin-right .65em
+    position relative
+    overflow hidden
+    .item > span
+      margin 0 30px
+  &__col-1 .item
+    justify-content flex-start
+  &__col-2 .item
+     justify-content flex-end
