--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@ h1 {
   justify-content: space-between;
   align-items: center;
 }
+.splash-container .title > h1:nth-child(2) {
+  margin-bottom: 70px;
+}
 .cycle-slideshow {
   position: relative;
   width: 50%;
