--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -78,7 +78,7 @@ h1
       align-items center
     h1 a
       color rgba(255,255,255,0)
-      transition all 1s
+      transition all .75s
       text-decoration none
     h1.cycle-pager-active a
       color rgba(255,255,255,1)
